--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,15 @@
 <resources>
     <string name="app_name">PebbleSpeak</string>
-
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="server_ip">server_ip</string>
+    <string name="tz">tz</string>
+
+    <string-array name="tz_array">
+        <item>America/Los_Angeles</item>
+        <item>America/Denver</item>
+        <item>America/Chicago</item>
+        <item>America/New_York</item>
+        <item>GMT</item>
+    </string-array>
 </resources>
